--- a/public/html/Aboutuspage.html
+++ b/public/html/Aboutuspage.html
@@ -24,6 +24,8 @@
         <div class="nav-button">
             <button class="btn" id="loginBtn" ><a href="/html/signIn.html">Sign In</a></button>
             <button class="btn" id="signUpBtn">  <a href="/html/signUp.html">Sign Up</a></button>
+            <button class="btn" id="loginBtn" >Sign In</button>
+            <button class="btn" id="signUpBtn">Sign Up</button>
     </nav>
 
 <div class="container">
