--- a/main.html
+++ b/main.html
@@ -3,7 +3,6 @@
 
 <head>
      <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="author" content="Maryam Soubky">
      <meta name="description" content="This is web page for an online bookstore.">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,18 +45,21 @@
                     <p class="p-bestseller">Check out the new best sellers of the week!</p>
                     <button class="shop-button">Shop Now</button>
                </div>
+               <button class="scroll-button-left scroll-button">&lt;</button>
+               <button class="scroll-button-right scroll-button">&gt;</button>
                <div class="booksBestSeller">
-                    <button class="scroll-button-left scroll-button">&lt;</button>
-                    <div class="wrapper">
-                         <a href="#" class="book"><img src="Pictures/FunnyStory.jpg" class="bookimg"></a>
-                         <a href="#" class="book"><img src="Pictures/TheWomen.jpg" class="bookimg"></a>
-                         <a href="#" class="book"><img src="Pictures/ACourtOfThornsAndRoses.jpg" class="bookimg"></a>
-                         <a href="#" class="book"><img src="Pictures/ACalamityOfSouls.jpg" class="bookimg"></a>
-                         <a href="#" class="book"><img src="Pictures/TheConvenantOfWater.jpg" class="bookimg"></a>
+                    <div class="card"><a href="#" class="book"><img src="Pictures/FunnyStory.jpg" class="bookimg"></a>
                     </div>
-                    <img src="Pictures/shelf.png" class="shelf">
-                    <button class="scroll-button-right scroll-button">&gt;</button>
+                    <div class="card"><a href="#" class="book"><img src="Pictures/TheWomen.jpg" class="bookimg"></a>
+                    </div>
+                    <div class="card"><a href="#" class="book"><img src="Pictures/ACourtOfThornsAndRoses.jpg"
+                                   class="bookimg"></a></div>
+                    <div class="card"><a href="#" class="book"><img src="Pictures/ACalamityOfSouls.jpg"
+                                   class="bookimg"></a></div>
+                    <div class="card"><a href="#" class="book"><img src="Pictures/TheConvenantOfWater.jpg"
+                                   class="bookimg"></a></div>
                </div>
+               <img src="Pictures/shelf.png" class="shelf">
           </div>
      </section>
      <section class="shop">
@@ -65,11 +67,6 @@
                <h2 class="title">Shop for Books!</h2>
                <div class="bookSlider">
                     <div class="bookBox">
-                         <div class="icons">
-                              <a href="#" class="fas fa-search"></a>
-                              <a href="#" class="fas fa-heart"></a>
-                              <a href="#" class="fas fa-eye"></a>
-                         </div>
                          <div class="book">
                               <img src="Pictures/Wonder.jpg" class="bookimg">
                          </div>
