--- a/public/html/signUp.html
+++ b/public/html/signUp.html
@@ -26,15 +26,15 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn" id="loginBtn" >Sign In</button>
-            <button class="btn" id="signUpBtn">Sign Up</button>
+            <button class="btn" id="loginBtn" ><a href="/html/signIn.html">Sign In</a></button>
+            <button class="btn" id="signUpBtn">  <a href="/html/signUp.html">Sign Up</a></button>
     </nav>
     
     
     <div class="wrapper">
         <form id="form" class="form">
         <div class="top">
-            <span>Have an account? <a href="#">Sign In</a></span>
+            <span>Have an account? <a href="/html/signIn.html">Sign In</a></span>
             <header>Sign Up</header>
         </div>
             <div class="two-forms">
@@ -75,6 +75,6 @@
     </div>
 
 
-<script src="/public/js/VSU.js"></script>
+<script src="..//js/VSU.js"></script>
 </body>
 </html>
