--- a/public/html/Aboutuspage.html
+++ b/public/html/Aboutuspage.html
@@ -22,8 +22,8 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn" id="loginBtn" >Sign In</button>
-            <button class="btn" id="signUpBtn">Sign Up</button>
+            <button class="btn" id="loginBtn" ><a href="/html/signIn.html">Sign In</a></button>
+            <button class="btn" id="signUpBtn">  <a href="/html/signUp.html">Sign Up</a></button>
     </nav>
 
 <div class="container">
