--- a/public/html/blog page.html
+++ b/public/html/blog page.html
@@ -6,7 +6,7 @@
 
 
     <title>blog section </title>
-    <link rel="stylesheet" href="blog page.css">
+    <link rel="stylesheet" href="../css/blog page.css">
 </head>
 <body>
     <section id="blog">
