--- a/public/html/contact us page.html
+++ b/public/html/contact us page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-    <link rel="stylesheet" href="../CSS/ContactUs.css" />
-    <link rel="stylesheet" href="C:\Users\minaa\Documents\GitHub\Web-Project\public\css\nav.css" />
+    <link rel="stylesheet" href="../CSS/contact us page.css" />
+    <link rel="stylesheet" href="../css/nav.css" />
 
   </head>
   <body>
@@ -22,8 +22,8 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn" id="loginBtn" ><a href="/html/signIn.html">Sign In</a></button>
-            <button class="btn" id="signUpBtn">  <a href="/html/signUp.html">Sign Up</a></button>
+            <button class="btn" id="loginBtn" ><a href="signIn.html">Sign In</a></button>
+            <button class="btn" id="signUpBtn">  <a href="signUp.html">Sign Up</a></button>
     </nav>
 
 
