--- a/public/html/signIn.html
+++ b/public/html/signIn.html
@@ -27,8 +27,8 @@
             </ul>
         </div>
         <div class="nav-button">
-            <button class="btn" id="loginBtn" ><a href="/html/signIn.html">Sign In</a></button>
-            <button class="btn" id="signUpBtn">  <a href="/html/signUp.html">Sign Up</a></button>
+            <button class="btn" id="loginBtn" ><a href="signIn.html">Sign In</a></button>
+            <button class="btn" id="signUpBtn">  <a href="signUp.html">Sign Up</a></button>
     </nav>
     
     
@@ -36,7 +36,7 @@
         <form id="form" onsubmit="validate()" class="form-box">
     <div class="Login" id="Login">
         <div class="top">
-            <span>Don't have an account? <a href="/html/signUp.html">Sign Up</a></span>
+            <span>Don't have an account? <a href="signUp.html">Sign Up</a></span>
             <header>Sign In</header>
         </div>
 
