--- a/public/html/userp.html
+++ b/public/html/userp.html
@@ -28,7 +28,8 @@
                <input type="submit" value="Update Profile">
           </form>
      </div>
-     <script src="../JS/userp.js"></script>
+     <script src="../js/userp.js"></script>
+     <script src="../js/Userprofile.js"></script>
 </body>
 
 </html>
