--- a/public/html/bookDetail.html
+++ b/public/html/bookDetail.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/bookDetail.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
     <link rel="icon" href="../Icon.jpeg">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Bookly</title>
 <head>
 
@@ -80,13 +82,13 @@
         </div>
 
         <div class="single-book-details">
-<h6>Comedy Book</h6>
-<h4>Diary Of The Wimpy Kid</h4>
-<h2>$25.00</h2>
+<h6 id="bookCategory">Book Category: Comedy Book</h6>
+<h4 id="bookTitle">Book Title: Diary Of The Wimpy Kid</h4>
+<h2 id="bookPrice">Book Price: $25.00</h2>
 <input type="number" value="1">
 <button class="normal1">Add To Cart</button>
 <button class="normal2">Add To Wishlist</button>
-<h4>Book Details</h4>
+<h4>Book Details:</h4>
 <span>
 Diary of a Wimpy Kid is a children's novel written and illustrated by Jeff Kinney. 
 It is the first book in the Diary of a Wimpy Kid series. 
@@ -95,4 +97,39 @@ The book is about a boy named Greg Heffley and his attempts to become popular in
 
         </div>
 
+</div>
+
+
+<!--footer-->
+
+<footer class="footer">
+    <div class="social">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-threads"></i></a>
+        <a href="#"><i class="fab fa-tiktok"></i></a>
     </div>
+    <ul class="list">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">about us</a>
+        </li>
+        <li>
+            <a href="#">Shop</a>
+        </li>
+
+        <li>
+            <a href="#">Terms</a>
+        </li>
+
+    </ul>
+    <p class="copyright">
+        &copy;	 BOOKLY    </p>
+
+    </footer>
+
+</body>
+
+</html>
