--- a/public/html/cart.html
+++ b/public/html/cart.html
@@ -4,6 +4,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../css/cart.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
     <link rel="icon" href="../Icon.jpeg">
+    <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Bookly</title>
 <head>
 
@@ -64,40 +66,40 @@
 <table width="100%">
 <thead>
     <tr>
-        <td>Remove</td>
         <td>Book Cover</td>
         <td>Book</td>
         <td>Price</td>
         <td>Quantity</td>
         <td>Subtotal</td>
+        <td>Remove</td>
     </tr>
 </thead>
 <tbody>
     <tr>
-        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
         <td><img src="../booksImages/Book1.jpg" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td>Diary Of A Wimpy Kid</td>
         <td>$25</td>
         <td>1</td>
         <td>$25</td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
 
     <tr>
-        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
         <td><img src="../booksImages/Book4.jpeg" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td>Harry Potter And The Goblet Fire</td>
         <td>$25</td>
         <td>1</td>
         <td>$25</td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
 
     <tr>
-        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
         <td><img src="../booksImages/Book6.jpeg" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td>Batman: It Begins Here!</td>
         <td>$25</td>
         <td>1</td>
         <td>$25</td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
 </tbody>
 
@@ -137,6 +139,36 @@
 </div>
 
 </div>
+
+<!-- footer -->
+
+<footer class="footer">
+    <div class="social">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-threads"></i></a>
+        <a href="#"><i class="fab fa-tiktok"></i></a>
+    </div>
+    <ul class="list">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">about us</a>
+        </li>
+        <li>
+            <a href="#">Shop</a>
+        </li>
+
+        <li>
+            <a href="#">Terms</a>
+        </li>
+
+    </ul>
+    <p class="copyright">
+        &copy;	 BOOKLY    </p>
+
+    </footer>
 
 
 
