--- a/public/html/wishlist.html
+++ b/public/html/wishlist.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="../CSS/wishlist.css"> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
     <link rel="icon" href="../Icon.jpeg">
-    <link rel="stylesheet" href="D:\Main\CSS\footer.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Bookly</title>
@@ -71,38 +71,45 @@
 <table width="100%">
 <thead>
     <tr>
-        <td>Remove</td>
+        <td>Add</td>
         <td>Book Cover</td>
         <td>Book</td>
         <td>Price</td>
+        <td>Remove</td>
     </tr>
 </thead>
 <tbody>
     <tr>
-        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
+        <td><button>Add to cart</button></td>
         <td><img src="../booksImages/Book1.jpg" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td>Diary Of A Wimpy Kid</td>
         <td>$25</td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
 
     <tr>
-        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
+        <td><button>Add to cart</button></td>
         <td><img src="../booksImages/Book4.jpeg" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td>Harry Potter And The Goblet Fire</td>
         <td>$25</td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
 
     <tr>
-        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
+        <td><button>Add to cart</button></td>
         <td><img src="../booksImages/Book6.jpeg" alt=""></td> <!--WWWWWWAAAAAAARRRRRRNNNNNNIIIIIINNNNNNGGGGGGG-->
         <td>Batman: It Begins Here!</td>
         <td>$25</td>
+        <td><a href="#"><i class="fas fa-times-circle"></i></a></td>
     </tr>
 </tbody>
 
 </table>
 
 </div>
+
+<!-- footer -->
+
 <footer class="footer">
     <div class="social">
         <a href="#"><i class="fab fa-instagram"></i></a>
