--- a/public/html/signUp.html
+++ b/public/html/signUp.html
@@ -60,15 +60,21 @@
                 <small>Error message</small>
             </div>
             <div class="input-box">
-                <input type="submit" class="submit" value="Sign In">
-            </div> 
+                <input type="password" id="ConfirmPassword" class="input-field" placeholder="Confirm Password" >
+                <i class="bx bx-lock-alt"></i>
+                <small>Error message</small>
+            </div>
+            <div class="input-box">
+                <input type="submit" class="submit" value="submit">
+            </div>          
             <div class="two-chx">
                 <div class="one">
                     <input type="checkbox" id="L-Check">
                     <label for="login-check">Remember Me</label>
                 </div>
                 <div class="two">
-                    <label><a href="#">Terms and conditions.</a></label>
+                    <input type="checkbox" id="termsCheckbox" checked>
+                    <label><a target="_blank" href="../html/Terms.html">Terms and conditions.</a></label>
                 </div>
             </div>
         </form>
