--- a/public/html/signIn.html
+++ b/public/html/signIn.html
@@ -51,7 +51,7 @@
                 <small>Error message</small>
             </div>
             <div class="input-box">
-                <input type="submit" class="submit" value="Sign In">
+                <input type="submit" class="submit" value="Submit">
             </div> 
             <div class="two-chx">
                 <div class="one">
@@ -59,6 +59,7 @@
                     <label for="login-check">Remember Me</label>
                 </div>
                 <div class="two">
+                    
                     <label><a href="#">forget password.</a></label>
                 </div>
             </div>
