Update contact us page.html
upload file

--- a/public/html/contact us page.html
+++ b/public/html/contact us page.html
@@ -1,62 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
-    <link rel="stylesheet" href="../CSS/contact us page.css" />
-    <link rel="stylesheet" href="../css/nav.css" />
-
-  </head>
-  <body>
-    <nav class="nav">
-        <div class="navlogo">
-            <p>Bookly</p>
-        </div>
-        <div class="nav-menu">
-            <ul>
-                <li><a href="#"class="link active">Home</a></li>
-                <li><a href="#"class="link">Shop</a></li>
-                <li><a href="#"class="link">About</a></li>
-                <li><a href="#"class="link">contact us</a></li>
-            </ul>
-        </div>
-        <div class="nav-button">
-            <button class="btn" id="loginBtn" ><a href="signIn.html">Sign In</a></button>
-            <button class="btn" id="signUpBtn">  <a href="signUp.html">Sign Up</a></button>
-    </nav>
-
-
-    <div class="container">
-      <form id="form" onsubmit="validate()" class="form-box">
-        <h1>Contact Us Form</h1>
-        <div class="inputField">
-          <input type="text" id="FN" placeholder="First Name"  />
-          <br>
-          <small>Error message</small>
-          
-        </div>
-        <div class="inputField">
-          <input type="text" id="LN" placeholder="Last Name" />
-          <br>
-          <small>Error message</small>
-        </div>
-        <div class="inputField">
-          <input type="email" id="email" placeholder="Email"  />
-          <br>
-          <small>Error message</small>
-        </div>
-        <div class="inputField">
-          <input type="text" id="mobile" placeholder="Mobile"  />
-          <br>
-         <small>Error message</small> 
-        </div>
-        <h4>Type Your Message Here...</h4>
-        <textarea id="message" ></textarea>
-        <input type="submit" class="send" value="send">
-      </form>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Contact</title>
+  <link rel="stylesheet" href="../CSS/contact us page.css" />
+  <link rel="stylesheet" href="../css/nav.css" />
+  <link rel="stylesheet" href="/contact us page.css" />
+</head>
+<body>
+  <nav class="nav">
+    <div class="navlogo">
+        <p>Bookly</p>
     </div>
-  </body>
-  <script src="/reee/script.js"></script>
+    <div class="nav-menu">
+        <ul>
+            <li><a href="#" class="link active">Home</a></li>
+            <li><a href="#" class="link">Shop</a></li>
+            <li><a href="#" class="link">About</a></li>
+            <li><a href="#" class="link">Contact Us</a></li>
+        </ul>
+    </div>
+    <div class="nav-button">
+        <button class="btn" id="loginBtn"><a href="signIn.html">Sign In</a></button>
+        <button class="btn" id="signUpBtn"><a href="signUp.html">Sign Up</a></button>
+    </div>
+  </nav>
 
+  <section class="contact">
+    <h2>Contact Me!</h2>
+    <form id="contactForm">
+      <div class="input-box">
+        <div class="input-field field">
+          <input type="text" placeholder="Full Name" id="name" class="item" autocomplete="off" required>
+          <div class="error-txt">Full name can't be blank</div>
+        </div>
+        <div class="input-field field">
+          <input type="email" placeholder="Email Address" id="email" class="item" autocomplete="off" required>
+          <div class="error-txt email">Email address can't be blank</div>
+        </div>
+      </div>
+      <div class="input-box">
+        <div class="input-field field">
+          <input type="text" placeholder="Phone Number" id="phone" class="item" autocomplete="off" required>
+          <div class="error-txt">Phone number can't be blank</div>
+        </div>
+        <div class="input-field field">
+          <input type="text" placeholder="Subject" id="subject" class="item" autocomplete="off" required>
+          <div class="error-txt">Subject can't be blank</div>
+        </div>
+      </div>
+      <div class="textarea-field field">
+        <textarea id="message" cols="30" rows="10" placeholder="Your message" class="item" autocomplete="off" required></textarea>
+        <div class="error-txt">Message can't be blank</div>
+      </div>
+      <div class="input-field field">
+        <input type="file" id="file" class="item" name="file">
+      </div>
+      <button type="submit">Send Message</button>
+    </form>
+  </section>
+
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="../js/Contact page.js"></script>
+  <script src="/Contact page.js"></script>
+</body>
 </html>
