--- a/public/html/contact us page.html
+++ b/public/html/contact us page.html
@@ -32,26 +32,26 @@
     <form id="contactForm">
       <div class="input-box">
         <div class="input-field field">
-          <input type="text" placeholder="Full Name" id="name" class="item" autocomplete="off" required>
+          <input type="text" placeholder="Full Name" id="name" class="item" autocomplete="off" >
           <div class="error-txt">Full name can't be blank</div>
         </div>
         <div class="input-field field">
-          <input type="email" placeholder="Email Address" id="email" class="item" autocomplete="off" required>
+          <input type="email" placeholder="Email Address" id="email" class="item" autocomplete="off" >
           <div class="error-txt email">Email address can't be blank</div>
         </div>
       </div>
       <div class="input-box">
         <div class="input-field field">
-          <input type="text" placeholder="Phone Number" id="phone" class="item" autocomplete="off" required>
+          <input type="text" placeholder="Phone Number" id="phone" class="item" autocomplete="off" >
           <div class="error-txt">Phone number can't be blank</div>
         </div>
         <div class="input-field field">
-          <input type="text" placeholder="Subject" id="subject" class="item" autocomplete="off" required>
+          <input type="text" placeholder="Subject" id="subject" class="item" autocomplete="off" >
           <div class="error-txt">Subject can't be blank</div>
         </div>
       </div>
       <div class="textarea-field field">
-        <textarea id="message" cols="30" rows="10" placeholder="Your message" class="item" autocomplete="off" required></textarea>
+        <textarea id="message" cols="30" rows="10" placeholder="Your message" class="item" autocomplete="off" ></textarea>
         <div class="error-txt">Message can't be blank</div>
       </div>
       <div class="input-field field">
