--- a/public/html/blog page.html
+++ b/public/html/blog page.html
@@ -199,6 +199,8 @@
     
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="../js/blog page.js"></script>
+    <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
+<script src="https://mediafiles.botpress.cloud/f933f12d-1409-439a-8b7b-b8a48a24969b/webchat/config.js" defer></script>
 </body>
 
 </html>
